projects/deja-js/component/date-picker/date-picker.component.scss
deja-date-picker {
	position: relative;

	.datepicker-actions {
		position: absolute;
		right: 0;
		top: 50%;
		transform: translateY(-50%);
		z-index: 2;

		button {
			background: none;
			border: none;
			margin-left: 0.2rem;
			padding: 0;
			outline: none;
			color: inherit;
			cursor: pointer;
			opacity: 0.4;

			&:hover {
				opacity: 0.8;
			}

			[fontIcon] {
                font-size: 100%;
                width: 1em;
                height: 1em;
			}
		}
	}
}

.deja-datepicker-overlay-container {
	overflow: visible;

    &.under-toolbar-position {
        .cdk-overlay-pane {
            top: 100px !important;
        }

        &.top-position {
            .cdk-overlay-pane {
                top: 5px !important;
            }
        }
    }

	.actions {
		position: relative;
		right: 2.7rem;
		top: 0;

		button.mat-mini-fab {
			background: none;
			border: none;
			box-shadow: none;
		}
	}

    deja-date-time-selector {
        >#date-time-selector {
            >#time-selector {
                deja-numeric-stepper .shadow {
                    background-color: inherit;
                }
            }
        }

    }
}

